Style changes that make elements smallers and aligned with the center, fixed sick and personal_day bools and added them to report page, add row now disappears when sick or personal day checkboxes are checked and reappear when unchecked.

--- a/app/assets/stylesheets/weeks.css.scss
+++ b/app/assets/stylesheets/weeks.css.scss
@@ -33,6 +33,20 @@ h1.row{
   margin-top: 15px;
 }
 
+#project{
+  margin: 0 33% 20px 33%;
+  width: 33%;
+}
+
+.field{
+  width: 33%;
+  margin: auto;
+}
+
+h1{
+  text-align:center;
+}
+
 @media print{
   .report{
     text-align:center !important;
